# rust_pru_rproc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  mmio.rs  remoteproc.rs  rpmsg.rs
