[package]
name = "pru_rproc_user"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.5"
thiserror = "1.0"
nix = { version = "0.30", features = ["poll"] }
libc = "0.2"
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "time", "macros", "net"] }

[features]
async = ["tokio"]
